--- a/style.css
+++ b/style.css
@@ -10,8 +10,20 @@ body{
     background-color: black;
 }
 
+html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 *{
     color: white;
     font-family: sans-serif;
     text-align: center;
+}
+
+h1{
+    height: 101%;
+    display: block;
 }
