--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 canvas, video{
     transform: scale(-1, 1);
-    display: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+
+canvas{
+    opacity: .5;
+}
+
 a{
     display: none;
 }
