--- a/style.css
+++ b/style.css
@@ -36,4 +36,7 @@ html, body{
 h1{
     height: 101%;
     display: block;
+    position: absolute;
+    background-color: black;
+    padding: 50px;
 }
