--- a/style.css
+++ b/style.css
@@ -38,9 +38,11 @@ h1{
     display: block;
     position: absolute;
     background-color: black;
-    padding: 50px;
+    padding: 20px;
+    font-size: 2em;
     z-index: 2;
     top: 0;
+    margin: 0;
 }
 
 img{
